--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -1,6 +1,31 @@
+:root{
+  background-image: url("Electricity.jpg");
+}
+
 .input{
-    border: 5px solid;
+    border: 3px solid;
     margin: auto;
-    width: 50%;
+    width: 34%;
+    height: 60px;
     padding: 10px;
-  }
+    background-color: #FFA090;
+}
+
+h1{
+  font-family: 'Courier New', Courier, monospace;
+}
+
+button{
+  position: relative;
+  top: 10px;
+}
+
+input{
+  position: relative;
+  left: 5px;
+}
+
+label{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 19px;
+}
